--- a/app.json
+++ b/app.json
@@ -1,15 +1,19 @@
 {
-  "pages": ["pages/index/index", "pages/logs/logs"],
+  "pages": [
+    "pages/index/index",
+    "pages/qrcode/qrcode",
+    "pages/logs/logs"
+  ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "小工具",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
-    "color": "#000000",
+    "color": "#000",
     "selectedColor": "#07C160",
-    "backgroundColor": "",
+    "backgroundColor": "#eee",
     "borderStyle": "black",
     "position": "bottom",
     "custom": false,
@@ -17,14 +21,20 @@
       {
         "pagePath": "pages/index/index",
         "text": "首页",
-        "iconPath": "",
-        "selectedIconPath": ""
+        "iconPath": "image/icon_component.png",
+        "selectedIconPath": "image/icon_component_HL.png"
+      },
+      {
+        "pagePath": "pages/qrcode/qrcode",
+        "text": "QRCode",
+        "iconPath": "image/icon_API.png",
+        "selectedIconPath": "image/icon_API_HL.png"
       },
       {
         "pagePath": "pages/logs/logs",
         "text": "LOGO",
-        "iconPath": "",
-        "selectedIconPath": ""
+        "iconPath": "image/icon_API.png",
+        "selectedIconPath": "image/icon_API_HL.png"
       }
     ]
   },
